# dance-diet

./: .gitignore  README.md  ai_server_main.py  kcal_cal.py  live_session_client_test.py  main.py  pyproject.toml  rocognize_gif.py
app/: __init__.py
servers/: __init__.py
servers/ai_server/: __init__.py  config.py  server.py
servers/ai_server/services/: __init__.py  food_classifier.py  food_pipeline.py  food_segmenter.py  gif_pose_service.py  pose_metrics.py
servers/general_server/: __init__.py  config.py  mock_data.py  server.py  session_manager.py  socket_manager.py  socket_routes.py
servers/shared/: __init__.py  db_connect.py  http_utils.py  schemas.py
